[project]
name = "graphics_system"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Elias",email = "nicolaselias@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tk >=0.1.0",
    "numpy (>=2.2.4,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
